prevents pagination text from overlapping one another

--- a/app/assets/stylesheets/content/_pagination.sass
+++ b/app/assets/stylesheets/content/_pagination.sass
@@ -70,9 +70,13 @@
   padding: 3px 0px
   white-space: nowrap
   text-align: right
+  overflow: hidden
+  text-overflow: ellipsis
 
 .pagination--range
   +flex(1)
   margin: 0 0 0 5px
   padding: 3px 0px
   display: block
+  overflow: hidden
+  text-overflow: ellipsis
